# poly-book

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  justfile
.cargo/: config.toml
.cursor/skills/: cloud-agent-starter.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml  supply-chain.yml
config/: default.toml
crates/pb-api/: Cargo.toml
crates/pb-api/src/: dto.rs  error.rs  lib.rs  live_state.rs  server.rs  streaming.rs
crates/pb-bin/: Cargo.toml
crates/pb-bin/src/: main.rs
crates/pb-bin/src/commands/: auto_ingest.rs  backfill.rs  checkpoint_producer.rs  discover.rs  execution_append.rs  execution_replay.rs  ingest.rs  market_discovery.rs  mod.rs  pipeline.rs  replay.rs  serve_api.rs
crates/pb-book/: Cargo.toml
crates/pb-book/benches/: book_depth.rs  book_ops.rs
crates/pb-book/src/: book.rs  error.rs  lib.rs
crates/pb-feed/: Cargo.toml
crates/pb-feed/src/: dispatcher.rs  error.rs  lib.rs  rate_limiter.rs  rest.rs  ws.rs
crates/pb-metrics/: Cargo.toml
crates/pb-metrics/src/: error.rs  lib.rs  recorder.rs  server.rs
crates/pb-replay/: Cargo.toml
crates/pb-replay/src/: backfill.rs  engine.rs  error.rs  lib.rs  reader.rs
crates/pb-store/: Cargo.toml
crates/pb-store/src/: clickhouse_sink.rs  error.rs  lib.rs  parquet_sink.rs  schema.rs  writer.rs
crates/pb-types/: Cargo.toml
crates/pb-types/benches/: fixed_point.rs  wire_deser.rs
crates/pb-types/src/: error.rs  event.rs  fixed.rs  lib.rs  newtype.rs  wire.rs
docs/: api.md  latency.md  operations.md  releasing.md  serve-api.md
docs/adr/: 0001-fixed-point-arithmetic.md  0002-btreemap-orderbook.md  0003-channel-message-passing.md  0004-zero-copy-deserialization.md  0005-mimalloc-allocator.md  0006-fxhashmap-dispatcher.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_book_delta.rs  fuzz_fixed_price.rs  fuzz_ws_deser.rs
infra/: ecr.tf  ecs.tf  iam.tf  logs.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  vpc.tf
openspec/changes/2026-03-06-market-data-upgrades/: design.md  proposal.md  tasks.md
openspec/changes/2026-03-06-market-data-upgrades/specs/backtest-credible-replay/: spec.md
openspec/changes/2026-03-06-market-data-upgrades/specs/live-execution-readiness/: spec.md
openspec/changes/2026-03-06-market-data-upgrades/specs/research-grade-integrity/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/: design.md  proposal.md  tasks.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/backtest-workbench/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/execution-observability-console/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/live-market-observability/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/live-trading-control-plane/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/query-workbench/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/replay-integrity-workbench/: spec.md
openspec/changes/2026-03-07-quant-workstation-platform/specs/strategy-control-plane/: spec.md
openspec/changes/archive/2026-03-05-live-data-feed/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-live-data-feed/specs/websocket-client/: spec.md
openspec/changes/archive/2026-03-05-observability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-observability/specs/metrics-server/: spec.md
openspec/changes/archive/2026-03-05-pb-book-engine/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-pb-book-engine/specs/l2-book-engine/: spec.md
openspec/changes/archive/2026-03-05-pb-types-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-pb-types-foundation/specs/fixed-point-arithmetic/: spec.md
openspec/changes/archive/2026-03-05-replay-backfill/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-replay-backfill/specs/replay-engine/: spec.md
openspec/changes/archive/2026-03-05-storage-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-storage-pipeline/specs/storage-sinks/: spec.md
tests/integration/: Cargo.toml  book_determinism.rs  clickhouse_roundtrip.rs  dispatcher_pipeline.rs  parquet_roundtrip.rs  replay_engine.rs  schema_conversion.rs
web/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.test.tsx  App.tsx  ExecutionTimelinePage.tsx  IntegrityPage.tsx  LiveFeedPage.tsx  ReplayLabPage.tsx  client.ts  constants.ts  demoData.ts  formatters.ts  index.css  main.tsx  types.ts  ui.tsx  useAdaptivePolling.test.tsx  useAdaptivePolling.ts  useOrderBookStream.ts  useThrottledState.ts
