[workspace]
resolver = "2"
members = [
    "crates/pb-api",
    "crates/pb-types",
    "crates/pb-book",
    "crates/pb-feed",
    "crates/pb-store",
    "crates/pb-replay",
    "crates/pb-metrics",
    "crates/pb-bin",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["Weiming Long <longweiming665@gmail.com>"]
repository = "https://github.com/weiminglong/poly-book"
homepage = "https://github.com/weiminglong/poly-book"
readme = "README.md"

[workspace.dependencies]
# Internal crates
pb-types = { path = "crates/pb-types" }
pb-api = { path = "crates/pb-api" }
pb-book = { path = "crates/pb-book" }
pb-feed = { path = "crates/pb-feed" }
pb-store = { path = "crates/pb-store" }
pb-replay = { path = "crates/pb-replay" }
pb-metrics = { path = "crates/pb-metrics" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Storage
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["async", "zstd"] }
object_store = { version = "0.11", features = ["aws"] }
clickhouse = { version = "0.13", features = ["inserter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"

# Testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["clickhouse"] }

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2"
tokio-util = "0.7"
futures-util = "0.3"
governor = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
