[package]
name = "pb-feed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "WebSocket ingest, REST discovery, and dispatch pipeline for poly-book"

[dependencies]
pb-types = { workspace = true }
pb-metrics = { path = "../pb-metrics" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
native-tls = "0.2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
url = { workspace = true }
