[package]
name = "pb-store"
version.workspace = true
edition.workspace = true

[dependencies]
pb-types = { workspace = true }
pb-metrics = { path = "../pb-metrics" }
tokio = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
clickhouse = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = "1"
